--- a/class-13-local_storage--ui_ux/demo-local_storage/index.html
+++ b/class-13-local_storage--ui_ux/demo-local_storage/index.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ChartJS demo, April 26, 2016</title>
+    <meta charset="utf-8">
+    <title></title>
     <link rel="stylesheet" href="style.css">
-    <script src="chart.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.min.js"></script>
   </head>
-
   <body>
 
-    <h1>What is our favorite Prince song?</h1>
+    <main>
+      <section>
+        <h1>Choose the ripest avocado!</h1>
+      </section>
+      <section id="display">
+        <img class="img1" src="" />
+        <img class="img2" src="" />
+      </section>
+      <div>
+        <button id="button">Show results</button>
+      </div>
 
-    <div id="voting">
-      <h2>Click to vote on your favorite of these songs:</h2>
-      <button id="purplerain">Purple Rain</button>
-      <button id="letswork">Let's Work</button>
-      <button id="dmsr">DMSR</button>
-      <button id="mountains">Mountains</button>
-      <button id="starfish">Starfish and Coffee</button>
-      <p class="inline-p">Then...</p>
-      <button id="draw-chart">Click here to see a chart!</button>
-      <button id="list-button">Or a lame old list</button>
-    </div>
+      <section id="chart-section">
 
-    <ul id="funky-list"></ul>
+        <canvas id="canvas" width="300" height="300"></canvas>
 
-    <canvas id="funky-chart" width="800px" height="400px"></canvas>
+      </section>
+    </main>
 
-    <script src="app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
